sass/ppc.scss
@charset "UTF-8";


// Variables
// =============================================================================

$breadcrumb-divider: quote("|");


// Bootstrap overrides (overrides must come before you import Bootstrap’s Sass files)
// =============================================================================

// Colors
// $white: #fff;
// $dark: #3C3744;
// $light: #F2F8FC;
// $primary:#0F75BC;
// $accent: #4DCCBD;

// Colors
$white: #fff;
$dark: #2A2C57;
$light: #ECF6FD;
$primary:#0F75BC;
$accent: #06C9B2;

$theme-colors: (
    "white": $white,
    "dark": $dark,
    "light": $light,
    "primary": $primary,
    "accent": $accent
);

// Toggle Bootstrap's global CSS preferences
$enable-shadows: true;
$enable-responsive-font-sizes: false;

// Buttons
$btn-padding-y: 0.75rem;       
$btn-padding-x: 1.25rem;             
$btn-line-height: 1;
$btn-border-radius: 40px;

// Typography
$font-family-base: 'Poppins', sans-serif;
$line-height-base: 1.6;
$font-weight-base: 300;
$link-color: $accent;

// Grid
$grid-gutter-width: 2rem;


// RFS overrides
// =============================================================================

$rfs-base-value: 0.875rem;
$rfs-rem-value: 16;
$rfs-factor: 50; // Factor of decrease


// Import RFS and Bootstrap
// =============================================================================

@import "../vendor/bootstrap/scss/bootstrap";
@import "../node_modules/rfs/scss";


// Global
// =============================================================================

html {
    overflow-y: hidden;
    overflow-x: hidden;
}

body {
    background-color: #fff;
    color: $dark;
    overflow-x: hidden;
    @include font-size(1.25rem);
}

p {
    margin-bottom: 1rem;
}

a {
    font-weight: 400;
    color: $accent;
    &:hover {
        color: $accent;
    }
}

h1 {
    font-weight: bold;
    line-height: 1.1428;
    @include font-size(4.25rem);
}

h2 {
    font-weight: 400;
    line-height: 1.1538;
    @include font-size(3.25rem);
}

h3 {
    font-weight: 300;
    line-height: 1.125;
    @include font-size(2rem);
}

.btn {
    text-transform: uppercase;
    box-shadow: none !important;
    @include font-size(1.25rem);
}

.ratio-box {
    position: relative;
    overflow: hidden;
    width: 100%;
    &_16-by-9 {
        padding-top: 56.25%;
    }
}

.main {
    margin-top: 80px;
    @media (max-width: 575.98px) {
        margin-top: 72px;
    }
}

.section {
    @include rfs(7.5rem 0, padding);
    &__preheading {
        @include font-size(1.25rem);
        font-weight: 300;
        color: $primary;
        position: relative;
        display: inline-block;
        left: 24px;
        &::before {
            content: '';
            display: inline-block;
            width: 20px;
            height: 1px;
            background-color: $primary;
            position: absolute;
            top: 50%;
            left: -24px;
        }
    }
    &__heading {
        @include rfs(3.5rem, margin-bottom);
        &_mb-small {
            margin-bottom: 1rem;
        }
    }
    &_large-gap {
        @include rfs(8.75rem 0, padding);
    }
}

// Highlight color
::selection {
    background-color: $primary;
    color: #fff;
}


// SPINNER
// =============================================================================

.spinner-wrapper {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background: $primary;
    background: linear-gradient(-45deg, $dark 0%, $primary 50%);
    background-size: 400% 400%;
	animation: gradient 15s ease infinite;
    z-index: 999999999;
}

.spinner {
    width: 100px;
    height: 50px;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
    text-align: center;
    &__ball {
        width: 20px;
        height: 20px;
        background-color: #fff;
        border-radius: 50%;
        display: inline-block;
        animation: motion 3s cubic-bezier(0.77, 0, 0.175, 1) infinite;
    }
    &__text {
        color: #fff;
        margin-top: 4px;
        font-family: sans-serif;
        letter-spacing: 3px;
        font-size: 10px;
    }
}


// TO TOP
// =============================================================================

.to-top {
    z-index: 99999;
    position: fixed;
    bottom: 0;
    right: 0;
    width: 48px;
    height: 48px;
    color: black;
    &:hover {
        color: black;
    }
}


// Header
// =============================================================================

.header {
    position: fixed;
    z-index: 99999999;
    width: 100%;
    // background: linear-gradient(270deg, #0F75BC 0%, #083B5E 50%);
    background-color: $primary;
    .navbar-toggler {
        border-radius: 4px;
    }
    &_shadow {
        box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
    }
}

.navbar-brand {
    line-height: 1;
    img {
        height: 32px;
        @media (max-width: 575.98px) {
            height: 24px;
        }
    }
}


// Headroom
// =============================================================================

.headroom {
    will-change: transform;
    transition: transform 200ms linear;
}
.headroom--pinned {
    transform: translateY(0%);
}
.headroom--unpinned {
    transform: translateY(-100%);
}
/* ... */

